@@ -1,5 +1,12 @@
 2006-12-09  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
 
+	* unichrome/via_memcpy.c:
+
+	ifdef's in memcpy.c only support i386 arch should
+	also support i86_64
+
+2006-12-09  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
+
 	* unichrome/via_xvmc.c:
 
 	K8M890 does not support XvMC like the other chipsets
